Finished all methods for rest